implemented up to feature 2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.vinaya.blecentralrole"
-		  xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+	package="com.vinaya.blecentralrole"
+	xmlns:android="http://schemas.android.com/apk/res/android">
+
+	<uses-permission android:name="android.permission.BLUETOOTH"/>
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+
+	<uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+	<service android:name="com.vinaya.blecentralrole.logic.ble.BluetoothLeService" android:enabled="true"/>
 
 	<application
 		android:allowBackup="true"
